<resources>
    <string name="app_name">OTK电竞</string>
    <string name="title_activity_address">收货地址</string>
    <string name="title_activity_add_account">添加账号</string>
    <string name="title_activity_balance_detail">余额明细</string>
    <string name="title_activity_bench">替补列表</string>
    <string name="title_activity_chat_room">聊天室</string>
    <string name="title_activity_contact_judge">联系裁判</string>
    <string name="title_activity_enroll">报名列表</string>
    <string name="title_activity_feedback">吐槽一下</string>
    <string name="title_activity_forgot">重置密码</string>
    <string name="title_activity_game_account">游戏账号</string>
    <string name="title_activity_goods_detail">商品详情</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_news">资讯</string>
    <string name="title_activity_match_detail">赛事详情</string>
    <string name="title_activity_message">消息</string>
    <string name="title_activity_message_match">比赛通知</string>
    <string name="title_activity_message_system">系统消息</string>
    <string name="title_activity_modify_pwd">修改密码</string>
    <string name="title_activity_my_match">我的比赛</string>
    <string name="title_activity_my_order">我的订单</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_register">注册新用户</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_sign_in">签到</string>
    <string name="title_activity_submit_shot">提交截图</string>
    <string name="title_activity_store">商城</string>
    <string name="title_activity_league">公会</string>
    <string name="title_activity_league_add">创建公会</string>
    <string name="title_activity_pay">订单信息确认</string>
    <string name="title_activity_profile">个人资料</string>
    <string name="btn_address">收货地址</string>
    <string name="btn_add_account">添加账号</string>
    <string name="btn_balance_detail">余额明细</string>
    <string name="btn_battle_contact">联系裁判</string>
    <string name="btn_battle_screenshot">提交截图</string>
    <string name="btn_battle_chat_qq">QQ聊天</string>
    <string name="btn_bench_list">替补列表(%1$s/%2$s)</string>
    <string name="btn_bind_alipay">绑定支付宝</string>
    <string name="btn_born">出生年月</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_check">查看</string>
    <string name="btn_check_update">检查更新</string>
    <string name="btn_clear_cache">清理缓存</string>
    <string name="btn_commend_match">推荐赛事</string>
    <string name="btn_copy">复制</string>
    <string name="btn_daily_mission">每日任务</string>
    <string name="btn_default_avatar">默认头像</string>
    <string name="btn_eg_screenshot">截图示例</string>
    <string name="btn_enroll">报名</string>
    <string name="btn_enroll_list">报名列表(%1$s/%2$s)</string>
    <string name="btn_exchange_now">立即兑换</string>
    <string name="btn_feedback">意见反馈</string>
    <string name="btn_forgot_password">忘记密码</string>
    <string name="btn_from_camera">拍照</string>
    <string name="btn_from_gallery">从相册中上传</string>
    <string name="btn_game_account">游戏帐号</string>
    <string name="btn_i_win">我 赢了</string>
    <string name="btn_i_lost">对手 赢了</string>
    <string name="btn_join_qq_group">加入官方Q群</string>
    <string name="btn_league_join">加入公会</string>
    <string name="btn_login">登录</string>
    <string name="btn_logout">退出登录</string>
    <string name="btn_message">消息</string>
    <string name="btn_my_match">我的比赛</string>
    <string name="btn_my_order">我的订单</string>
    <string name="btn_ok">确定</string>
    <string name="tv_push">消息推送</string>
    <string name="btn_qq">QQ</string>
    <string name="btn_register">注册</string>
    <string name="btn_recent_game">最近赛事</string>
    <string name="btn_skip">%d秒跳过</string>
    <string name="btn_send_captcha">发送验证码</string>
    <string name="btn_settings">设置</string>
    <string name="btn_sign_in">每日签到</string>
    <string name="btn_sign_in_now">立即签到</string>
    <string name="btn_shop">撒币商城</string>
    <string name="btn_submit">提交</string>
    <string name="btn_to_register">新用户注册</string>
    <string name="btn_upload_screenshot">上传截图</string>
    <string name="btn_withdraw">提现</string>
    <string name="btn_withdraw_record">提现记录</string>
    <string name="btn_today_match">今日赛事</string>
    <string name="btn_wechat">微信</string>
    <string name="text_about_us">关于OTK</string>
    <string name="text_alipay">支付宝</string>
    <string name="text_ban">禁用</string>
    <string name="text_captcha">验证码</string>
    <string name="text_contact">官网地址：www.otkpk.com\n新浪微博：@otk游戏竞技\n微信公众号：otk游戏竞技\n官方QQ群：77327504</string>
    <string name="text_copyright">copyright 2016 捷信宇(厦门)科技</string>
    <string name="text_contact_judge_title">点击下方的联系方式可以找我们</string>
    <string name="text_contact_judge_desc">如果页面没有自动跳转到裁判QQ，您可以尝试再次点击，或者是手动添加。</string>
    <string name="text_common_rule">通用赛事规则 >></string>
    <string name="text_common_rule_desc">采用通用赛事规则，请参赛前仔细阅读本网站的</string>
    <string name="text_detail_info">详情介绍</string>
    <string name="text_feedback_qq">客服QQ：123456789</string>
    <string name="text_feedback_wb">微博@OTK电竞</string>
    <string name="text_feedback_product">产品建议</string>
    <string name="text_feedback_bug">发现BUG</string>
    <string name="text_feedback_cheat">举报作弊</string>
    <string name="text_other">其他</string>
    <string name="text_game_account">游戏帐号</string>
    <string name="text_game_add_notice">备注：战网游戏需要添加数字战网号，如：otkxxx#1234</string>
    <string name="text_game_icon">游戏图标</string>
    <string name="text_game_mode">游戏模式</string>
    <string name="text_game_name">游戏名称</string>
    <string name="text_game_edit_notice">提示：用户在使用修改游戏账号并且保存后，在15天内不能再次修改</string>
    <string name="text_hearthstone">炉石传说</string>
    <string name="text_judge_qq">裁判QQ—安娜：1655647371</string>
    <string name="text_lol">英雄联盟</string>
    <string name="text_match_bonus">赛事奖金</string>
    <string name="text_match_input_invite">请输入邀请码</string>
    <string name="text_match_input_password">请输入赛事密码</string>
    <string name="text_match_final">决赛</string>
    <string name="text_match_semfinal">半决赛</string>
    <string name="text_match_battle">半决赛前</string>
    <string name="text_match_mode">比赛模式</string>
    <string name="text_match_support">赛事赞助</string>
    <string name="text_match_qq_group">OTK炉石传说赛事①群 ：77327504</string>
    <string name="text_message_system">系统消息</string>
    <string name="text_message_match">比赛通知</string>
    <string name="text_mobile">手机号</string>
    <string name="text_overwatch">守望先锋</string>
    <string name="text_battle_ban_title">BAN英雄阶段</string>
    <string name="text_battle_ban_notice">请禁用英雄！</string>
    <string name="text_battle_ban_desc">在对方选择的英雄中禁用一个英雄，对方在本轮比赛不能使用该因英雄</string>
    <string name="text_battle_baned_desc">提交成功！等待对手提交PICK结果后进入BAN阶段。当第一轮比赛时间倒计时为0，未提交PICK结果的一方直接判负</string>
    <string name="text_battle_ended">比赛结束</string>
    <string name="text_battle_ended_desc">%s获得了胜利</string>
    <string name="text_battle_pick_title">Pick英雄阶段</string>
    <string name="text_battle_pick_notice">请选择出战英雄！</string>
    <string name="text_battle_pick_desc">选择出战英雄，你在本轮比赛中只能使用你选择的英雄,每个英雄获胜后不能继续使用（限本轮）</string>
    <string name="text_battle_picked_desc">提交成功！等待对手提交PICK结果后进入BAN阶段当第一轮比赛时间倒计时为0，未提交PICK结果的一方直接判负</string>
    <string name="text_battle_prepare_phase">准备阶段</string>
    <string name="text_battle_ready_desc">点击“准备”按钮进入比赛，准备截断结束之后必须互相添加对手，同事在网页聊天室、游戏里说明是否进行卡组选择界面的截图</string>
    <string name="text_battle_submit_result">提交比赛结果</string>
    <string name="text_battle_submit_result_desc">您提交的结果为：%1$s&#160;%2$s&#160;赢了\n正在等待对手提交比赛结果</string>
    <string name="text_battle_controversial_desc">双方均提交自己胜利/失败，保存好相关证据截图，请先尝试重新提交结果，无法重新提交主动联系裁判进行处理。裁判QQ：1655647371</string>
    <string name="text_push_all">接收推送</string>
    <string name="text_push_match">比赛通知</string>
    <string name="text_reward">总奖金</string>
    <string name="text_reward_winner">冠军独享</string>
    <string name="text_reward_2">亚军</string>
    <string name="text_reward_3_4">第3&#8211;4名</string>
    <string name="text_reward_5_8">第5&#8211;8名</string>
    <string name="text_reward_9_16">第9&#8211;16名</string>
    <string name="text_reward_17_32">第17&#8211;32名</string>
    <string name="text_reward_33_64">第33&#8211;64名</string>
    <string name="text_share">分享</string>
    <string name="text_signed">已签到</string>
    <string name="text_sign_bonus">签到成功，获得撒币+%s！\n</string>
    <string name="text_sign_series_bonus">人品爆炸，从宝箱内开出了%d撒币！</string>
    <string name="text_sign_series_desc">距离宝箱开启，还需连续签到%d天</string>
    <string name="text_slogan">打造一个有温度的的线上比赛平台</string>
    <string name="text_special_rules">特殊规则</string>
    <string name="text_to_login">点击登录</string>
    <string name="text_upload_avatar">上传头像</string>
    <string name="text_which_rounds">第%d轮</string>
    <string name="text_withdraw_fee">(手续费 - 1)</string>
    <string name="text_wzry">王者荣耀</string>
    <string name="label_address">收货地址：</string>
    <string name="label_apply_money">申请金额</string>
    <string name="label_avatar">头像</string>
    <string name="label_balance">余额：%s</string>
    <string name="label_balance_sb">拥有撒币：</string>
    <string name="label_balance_money">拥有元宝：</string>
    <string name="label_battle_id">对战ID：%d</string>
    <string name="label_born">生辰</string>
    <string name="label_cash_account">提现支付宝帐号：</string>
    <string name="label_cash_balance">元宝余额：</string>
    <string name="label_contact">联系方式：</string>
    <string name="label_consignee">收货人：%s</string>
    <string name="label_consignee_address">收货地址：%s</string>
    <string name="label_current_version">当前版本&#160;v%s</string>
    <string name="label_deck_selection_screen_1">卡组选择界面1：</string>
    <string name="label_deck_selection_screen_2">卡组选择界面2：</string>
    <string name="label_email">邮箱</string>
    <string name="label_feedback_type">吐槽类型：</string>
    <string name="label_feedback_content">吐槽内容：</string>
    <string name="label_game_account">游戏帐号：</string>
    <string name="label_game_name">游戏名称：</string>
    <string name="label_introduction">签名</string>
    <string name="label_job">现状</string>
    <string name="label_match_id_cost">赛事ID：%1$d&#160;&#160;&#160;报名费：%2$d撒币</string>
    <string name="label_match_id">赛事ID：%d</string>
    <string name="label_match_state">赛事状态：%1$s%2$s</string>
    <string name="label_my_coin">我的元宝：%s</string>
    <string name="label_order_num">订单号：%s</string>
    <string name="label_profile_area">地址</string>
    <string name="label_pwd">密码</string>
    <string name="label_pwd_confirm">重复密码</string>
    <string name="label_pwd_new">新密码</string>
    <string name="label_pwd_old">旧密码</string>
    <string name="label_qq">QQ</string>
    <string name="label_select_spec">选择样式：</string>
    <string name="label_screenshot_round_one">第一局截图：</string>
    <string name="label_screenshot_round_two">第二局截图：</string>
    <string name="label_screenshot_round_third">第三局截图：</string>
    <string name="label_uid">UID</string>
    <string name="label_upload_image">上传截图：</string>
    <string name="label_username">用户名</string>
    <string name="hint_alipay">支付宝帐号</string>
    <string name="hint_captcha">验证码</string>
    <string name="hint_confirm_password">再次输入密码</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_feedback_contact">请留下您的联系方式（QQ、手机）</string>
    <string name="hint_feedback_content">请写下您要吐槽的话吧&#8230;</string>
    <string name="hint_game_nickname">请输入您的游戏昵称</string>
    <string name="hint_introduction">有趣的个人介绍会吸引更多粉丝哦</string>
    <string name="hint_league_title">请输入您的公会名</string>
    <string name="hint_mobile">请输入的手机号</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_old_password">请输入旧密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_username">请输入用户名</string>
    <string name="dialog_cash_in"><b>·</b> 最小提现金额为 15 元，申请后会在一周内到账。\n <b>·</b> 网站会对50元以下的的提现收取1元转账手续费（不含50），所以大家要多多的累积奖金哦。\n <b>·</b> 成功申请提现后账户余额会先扣除，如果出现提现失败，申请的金额会返还到账户上，对提现有相关的问题可以联系客服。</string>
</resources>