<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.user.ModifyPwdActivity">

    <include layout="@layout/include_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/tv_modify_pwd_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/horizontal_margin"
            android:text="@string/label_pwd_old"
            />

        <EditText
            android:id="@+id/et_modify_pwd_old"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/tv_modify_pwd_old"
            android:background="@color/white"
            android:hint="@string/hint_old_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            />

        <TextView
            android:id="@+id/tv_modify_pwd_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/horizontal_margin"
            android:layout_below="@id/tv_modify_pwd_old"
            android:text="@string/label_pwd_new"
            />

        <EditText
            android:id="@+id/et_modify_pwd_new"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_modify_pwd_old"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/tv_modify_pwd_new"
            android:background="@color/white"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_modify_pwd_old"
            android:background="@color/divGray"
            />

        <TextView
            android:id="@+id/tv_modify_pwd_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/horizontal_margin"
            android:layout_below="@id/tv_modify_pwd_new"
            android:text="@string/label_pwd_confirm"
            />

        <EditText
            android:id="@+id/et_modify_pwd_confirm"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_modify_pwd_new"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/tv_modify_pwd_confirm"
            android:background="@color/white"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_modify_pwd_new"
            android:background="@color/divGray"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_modify_pwd_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_subhead_material"
        />

</LinearLayout>