<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.user.ForgotActivity">

    <include layout="@layout/include_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_reset_pwd_mobile"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/widget_medium_height"
            android:gravity="center"
            android:text="@string/label_mobile" />

        <EditText
            android:id="@+id/et_forgot_mobile"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/tv_reset_pwd_mobile"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/text_hint" />

        <TextView
            android:id="@+id/tv_reset_pwd_code"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/tv_reset_pwd_mobile"
            android:gravity="center"
            android:text="@string/label_captcha" />

        <EditText
            android:id="@+id/et_forgot_captcha"
            style="@style/TextBody"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_forgot_mobile"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/tv_reset_pwd_code"
            android:background="@color/white"
            android:ems="6"
            android:hint="@string/hint_captcha"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="@color/text_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_forgot_mobile" />

        <Button
            android:id="@+id/btn_forgot_captcha"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_forgot_mobile"
            android:layout_marginTop="8dp"
            android:text="@string/btn_send_captcha"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_caption_material" />

        <TextView
            android:id="@+id/tv_forgot_new"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_forgot_captcha"
            android:gravity="center"
            android:text="@string/label_pwd_new" />

        <EditText
            android:id="@+id/et_forgot_new"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_forgot_captcha"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/tv_forgot_new"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_forgot_captcha" />

        <TextView
            android:id="@+id/tv_forgot_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/tv_forgot_new"
            android:gravity="center"
            android:text="@string/label_pwd_confirm" />

        <EditText
            android:id="@+id/et_forgot_confirm"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_medium_height"
            android:layout_below="@id/et_forgot_new"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/tv_forgot_confirm"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/et_forgot_new" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_forgot_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        android:text="@string/btn_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_subhead_material" />

</LinearLayout>