<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="20dp"
        android:text="@string/btn_withdraw"
        android:textAppearance="@style/TextTitle"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_dialog_withdraw_amount"
        style="@style/BaseEditText"
        android:text="15"
        >

        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        android:lineSpacingExtra="6dp"
        android:padding="8dp"
        android:text="@string/dialog_cash_in"
        android:textAppearance="@style/TextCaption"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_dialog_cancel"
            style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/btn_cancel"
            android:textColor="@color/textSecondary"
            android:textSize="13sp"
            />

        <Button
            android:id="@+id/btn_dialog_ok"
            style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/btn_ok"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>