<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_activity_game_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.miguan.otk.module.user.GameAccountActivity">

    <include layout="@layout/include_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textBody"
        android:divider="@drawable/div_gray"
        android:orientation="horizontal"
        android:showDividers="middle|beginning|end"
        >

        <TextView
            android:id="@+id/tv_game_account_icon"
            android:layout_width="0dp"
            android:layout_height="@dimen/widget_small_height"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/text_game_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body_material"
            android:textStyle="bold"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#555555"
            />

        <TextView
            android:id="@+id/tv_game_account_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/widget_small_height"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/text_game_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body_material"
            android:textStyle="bold"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="#555555"
            />

        <TextView
            android:id="@+id/tv_game_account"
            android:layout_width="0dp"
            android:layout_height="@dimen/widget_small_height"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/text_game_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_body_material"
            android:textStyle="bold"
            />

    </LinearLayout>

    <com.jude.easyrecyclerview.EasyRecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_game_add"
        style="@style/ButtonPrimaryRound"
        android:background="@drawable/btn_stroke_primary_dark_radius_selector"
        android:text="@string/btn_add_account"
        android:textColor="@color/text_color_primarydark2secondary"
        />

</LinearLayout>
